[gd_scene load_steps=28 format=2]

[ext_resource path="res://Import/Graph/Actor/PNG/Zombie-sheet.png" type="Texture" id=1]
[ext_resource path="res://Scene/Zombie/Zombie.gd" type="Script" id=2]
[ext_resource path="res://Son/zombi_mort.ogg" type="AudioStream" id=3]
[ext_resource path="res://Import/Graph/HUB/Zombie/Front_Health_bars.png" type="Texture" id=4]
[ext_resource path="res://Import/Graph/HUB/Zombie/Back_Health_bars.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 1 ), SubResource( 24 ), SubResource( 5 ) ],
"loop": true,
"name": "Move",
"speed": 3.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "Spawn",
"speed": 3.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "Hurt",
"speed": 3.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "Die",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.0
height = 11.0

[sub_resource type="CircleShape2D" id=4]
radius = 168.0

[node name="Zombie" type="KinematicBody2D"]
z_index = -1
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 2 )
animation = "Spawn"

[node name="Health_Bar" type="Control" parent="AnimatedSprite"]
margin_left = -7.99994
margin_top = 17.0
margin_right = 32.0001
margin_bottom = 57.0

[node name="TextureProgress" type="TextureProgress" parent="AnimatedSprite/Health_Bar"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
max_value = 1.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )

[node name="HitBox" type="CollisionShape2D" parent="."]
process_priority = -1
position = Vector2( -2, 2 )
shape = SubResource( 3 )
disabled = true

[node name="ChaseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
shape = SubResource( 4 )
disabled = true

[node name="Soundbox" type="Node2D" parent="."]

[node name="Hurt" type="AudioStreamPlayer2D" parent="Soundbox"]
stream = ExtResource( 3 )
